--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "language-ooc",
   "version": "0.0.0",
-  "description": "Syntax highlighting and snippets to OOC files",
-  "repository": "ttps://github.com/nilium/ooc.tmbundle",
+  "description": "Syntax highlighting and ooc files",
+  "repository": "https://github.com/cogneco/language-ooc",
   "license": "MIT",
   "engines": {
     "atom": ">0.50.0"
