--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "language-ooc",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "Syntax highlighting for ooc files",
   "repository": "https://github.com/cogneco/language-ooc",
   "license": "MIT",
   "engines": {
     "atom": ">0.50.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
